--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     <div class="About-section_left">
                         <div class="borderimage">
                             <div class="profileImage">
-                                <img src="/Image_Folder/profileImage.png" alt="profile Image"
+                                <img src="profileImage.png" alt="profile Image"
                                     width="300px" height="300px">
                             </div>
                         </div>
@@ -504,7 +504,7 @@
                         <div class="firstProject">
                             <a class="Zoom"
                                 href="https://rohitguptakarate.github.io/linkedin/"><img
-                                    src="/Image_Folder/linkedin-homepage.jpg" alt="image"
+                                    src="linkedin-homepage.jpg" alt="image"
                                     width="100%" height="110%"></a>
                         </div>
                         <div class="text_discriptions">
@@ -524,7 +524,7 @@
                         <div class="firstProject">
                             <a class="Zoom"
                                 href=" https://rohitguptakarate.github.io/login_Page/"><img
-                                    src="/Image_Folder/landingpage.png" alt="image"
+                                    src="landingpage.png" alt="image"
                                     width="100%" height="110%"></a>
                         </div>
                     <div class="text_discriptions">
@@ -544,7 +544,7 @@
                         <div class="firstProject">
                             <a class="Zoom"
                                 href=" https://rohitguptakarate.github.io/QuizApp/"><img
-                                    src="/Image_Folder/Quiz App.png" alt="image" width="100%"
+                                    src="Quiz App.png" alt="image" width="100%"
                                     height="110%"></a>
                         </div>
                         <div class="text_discriptions">
@@ -565,7 +565,7 @@
                             <div class="firstProject">
                                 <a class="Zoom"
                                     href="http://tic-tac-toe-game-8a5msaaql-rohit-guptas-projects-35ddfc19.vercel.app"><img
-                                        src="/Image_Folder/Tic_tac.png" alt="image"
+                                        src="Tic_tac.png" alt="image"
                                         width="100%" height="110%"></a>
                             </div>
                             <div class="text_discriptions">
@@ -583,7 +583,7 @@
                             <div class="firstProject">
                                 <a class="Zoom"
                                     href="https://rohitguptakarate.github.io/Rock_Game/"><img
-                                        src="/Image_Folder/Rock_paper.png" alt="image"
+                                        src="Rock_paper.png" alt="image"
                                         width="100%" height="110%"></a>
                             </div>
                             <div class="text_discriptions">
